<resources>
    <string name="app_name">Rose Tutor Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="find_tutor">Find a tutor</string>
    <string name="find_a_tutor">Find a Tutor</string>
    <string name="find_a_tutor_by_name_or_course">Find a tutor by name or course</string>
    <string name="place_holder_name">Name: %1$s</string>
    <string name="tutors_availablity">tutors availability</string>
    <string name="notify_tutor">Notify Tutor</string>
    <string name="search">Search</string>
    <string name="search_here">search here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placer_holder_email">Email: %1$s</string>
    <string name="place_holder_classyear">Class of %1$d</string>
    <string name="favorite_tutor">Favorite Tutor</string>
    <string name="your_favorited_tutors">Your Favorite Tutors:</string>
    <string name="enter_your_message_below">Enter your message below:</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="unfav">Unfavorite</string>
    <string name="place_holder_courses">Courses: </string>
    <string name="location">Location: %1$s</string>
    <string name="available_n_1_s">Available: \n%1$s</string>
    <string name="tutor_rating">Rating: %1$.2f (%2$d)</string>
    <string name="the_profile_picture_of_the_tutor">The profile picture of the tutor</string>

    <string-array name="search_spinner">
        <item>by name</item>
        <item>by course</item>
    </string-array>
    <string name="students_who_need_help">Students who need help:</string>
    <string name="notify">Notify</string>
    <string name="i_need_help">I need help!</string>
    <string name="name">Name: %1$s</string>
    <string name="email_edit">Email: %1$s</string>
    <string name="class_edit">Class:</string>
    <string name="courses_edit">Courses:</string>
    <string name="location_edit">Location:</string>
    <string name="update_profile">Update Profile</string>
    <string name="app_label">Rose Tutor Tracker</string>
    <string name="sign_out">Sign out</string>
    <string name="change_classes">Change classes</string>
    <string name="change_location">Change location</string>
    <string name="change_days">Change days</string>
    <string name="change_timings">Change timings</string>
    <string name="switch_to_tutor">Switch to tutor</string>
    <string name="course_edit_instructions">Add or edit your courses below:</string>
    <string name="add_a_course">Add a Course</string>
    <string name="done">Done</string>
    <string name="save_course">Save</string>
    <string name="next">Next</string>
    <string name="start_tutoring">Start tutoring!</string>
    <string name="tutor_setup_completion_message">Thank you for becoming a tutor. \n\nYou are now done with your tutor setup.\n\nIf you\'d like to change any of the information you provided, you can change them in the settings screen.</string>
    <string name="major">Major:</string>
    <string name="major_placement">Major: %1$s</string>
    <string name="location_placeholder">Location: %1$s</string>
    <string name="login">Login</string>
    <string name="resolve_message">%1$s has resolved your request. Feel free to rate your experience below.</string>
    <string name="rating_inst">Please rate your experience from 0 to 5 or close</string>
    <string name="rating_error_inst">Please provide a rating between 0 and 5 or hit the close button</string>
    <string name="load_img">Loading image</string>
</resources>