<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5sp">

        <ImageView
            android:id="@+id/tutor_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/the_profile_picture_of_the_tutor"
            android:src="@drawable/ic_baseline_person_outline_24" />

        <TextView
            android:id="@+id/tutor_name"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_profile"
            android:layout_marginTop="10dp"
            android:text="@string/place_holder_name" />

        <TextView
            android:id="@+id/tutor_email"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_name"
            android:text="@string/placer_holder_email" />

        <TextView
            android:id="@+id/tutor_class"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_email"
            android:text="@string/place_holder_classyear" />

        <TextView
            android:id="@+id/courses"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_class"
            android:layout_alignStart="@id/tutor_class"
            android:text="@string/place_holder_courses" />

        <TextView
            android:id="@+id/location"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:layout_alignStart="@id/courses"
            android:text="@string/location" />

        <TextView
            android:id="@+id/tutor_detail_availability"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_alignStart="@id/location"
            android:text="@string/available_n_1_s" />

        <TextView
            android:id="@+id/tutor_rating"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_detail_availability"
            android:layout_alignStart="@id/tutor_detail_availability"
            android:layout_marginBottom="10dp"
            android:text="@string/tutor_rating" />

        <Button
            android:id="@+id/notify_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_rating"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/notify_tutor" />

        <Button
            android:id="@+id/favorite_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_rating"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:text="@string/favorite_tutor" />
    </RelativeLayout>
</ScrollView>