<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/tutor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_name"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/tutor_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutor_name"
        android:text="@string/major_placement"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tutor_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutor_major"
        android:text="@string/location_placeholder"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/tutor_availablity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/tutors_availablity" />

</RelativeLayout>