<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5sp">

        <ImageView
            android:id="@+id/tutor_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/the_profile_picture_of_the_tutor"
            android:src="@drawable/ic_baseline_person_outline_24" />

        <LinearLayout
            android:id="@+id/name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_profile">

            <TextView
                style="@style/tutorDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"

                />

            <EditText
                android:id="@+id/tutor_name"
                style="@style/tutorDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="Enter Your Name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_row">

            <TextView
                style="@style/tutorDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_edit" />

            <EditText
                android:id="@+id/tutor_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Your Email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/class_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_row">

            <TextView
                style="@style/tutorDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_edit" />

            <EditText
                android:id="@+id/tutor_class"
                style="@style/tutorDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Your Graduation Year"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/courses_row"
            style="@style/tutorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/class_row">

            <TextView
                style="@style/tutorDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses_edit" />

            <EditText
                android:id="@+id/courses"
                style="@style/tutorDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Your Courses"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses_row">

            <TextView
                style="@style/tutorDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_edit" />

            <EditText
                android:id="@+id/location"
                style="@style/tutorDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter Your Location"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:id="@+id/tutor_detail_availability"
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_row"
            android:text="@string/available_n_1_s" />

        <Button
            android:id="@+id/update_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutor_detail_availability"
            android:text="@string/update_profile" />
    </RelativeLayout>
</ScrollView>