<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_your_message_below" />

    <EditText
        android:id="@+id/message_to_tutor"
        android:layout_width="350dp"
        android:layout_height="105dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:inputType="textCapSentences|textMultiLine" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_to_tutor"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20sp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_to_tutor"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30dp"
        android:text="@string/send" />


</RelativeLayout>