<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="5sp">


    <ImageView
        android:id="@+id/user_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/the_profile_picture_of_the_tutor"
        android:src="@drawable/ic_baseline_person_outline_24" />

    <Button
        android:id="@+id/user_edit_upload_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Upload Photo" />

    <LinearLayout
        android:id="@+id/name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_edit_upload_photo_button">

        <TextView
            android:id="@+id/user_name"
            style="@style/tutorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_row">

        <TextView
            android:id="@+id/user_email"
            style="@style/tutorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_row">

        <TextView
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_edit" />

        <EditText
            android:id="@+id/user_class"
            style="@style/tutorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter Your Graduation Year"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/major_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/class_row">

        <TextView
            style="@style/tutorDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major" />

        <EditText
            android:id="@+id/user_major"
            style="@style/tutorDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Enter Your Major"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/update_user_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/major_row"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update_profile" />

    <Button
        android:id="@+id/cancel_user_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_user_profile_button"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/cancel" />


</RelativeLayout>

</ScrollView>